implementacion de sass

--- a/css/main.css
+++ b/css/main.css
@@ -1,413 +1,362 @@
+@charset "UTF-8";
 /* reset */
-
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
-
 
 /* estilos generales */
-
-html, body{
-    height: 100%;
-}
-  
-body{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+html, body {
+  height: 100%;
 }
 
-main{
-    flex: 1;
-    align-content: center;
-    padding: 10px;    
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-h1{
-    font-family: "proxima-nova";
-    color: #666666;
-    font-weight: bold;
-    text-align: center;
-    margin: 20px 0px;
+main {
+  flex: 1;
+  align-content: center;
+  padding: 10px;
 }
 
-h3, h5{
-    font-family: "proxima-nova";
-    color: #666666;
-    font-weight: bold;
+p {
+  font-family: "proxima-nova";
+  color: #666666;
 }
 
-p{
-    font-family: "proxima-nova";
-    color: #666666;
+h1 {
+  font-family: "proxima-nova";
+  color: #666666;
+  font-weight: bold;
+  text-align: center;
+  margin: 20px 0px;
 }
 
+h3, h5 {
+  font-family: "proxima-nova";
+  color: #666666;
+  font-weight: bold;
+}
 
 /* estilos de header */
-
-.white-bg{
-    background-color: white;
+.white-bg {
+  background-color: white;
 }
 
-.logotipo{
-    height: 50px;
-    margin-left: 10px;
+.logotipo {
+  height: 50px;
+  margin-left: 10px;
 }
 
-.bold-act{
-    font-weight: 500;
+.bold-act {
+  font-weight: 500;
 }
 
-.bold-hov:hover{
-    font-weight: 600;
+.bold-hov:hover {
+  font-weight: 600;
 }
 
-header nav div div ul li{
-    font-family: "Advent Pro";
-    font-weight: 400;
-    font-size: 20px;
-    padding: 0px 10px;
-    color: #666666;
-    text-decoration: none;
-    text-align: center;
+header nav div div ul li {
+  font-family: "Advent Pro";
+  font-weight: 400;
+  font-size: 20px;
+  padding: 0px 10px;
+  color: #666666;
+  text-decoration: none;
+  text-align: center;
 }
-
 
 /* animacion */
+.intro-animacion-desktop {
+  display: none;
+}
 
-    .intro-animacion-desktop{
-        display: none;
-    }
+.deslizar {
+  animation: mantenerYColapsar 5s forwards; /* Duración total de la animación */
+  max-width: 100%; /* Ajusta según la altura del video o imagen */
+  transition: max-height 1s ease-out; /* Transición para colapsar suavemente */
+}
 
-    /* animacion - desktop */
-
-    @media screen and (min-width: 1200px){
-            
-        .intro-animacion-desktop{
-            display: block;
-            width: 100%;
-            height: auto;
-            text-align: center;
-            overflow: hidden;
-        }        
-    }
-    
-    .deslizar{
-        animation: mantenerYColapsar 5s forwards; /* Duración total de la animación */
-        max-width: 100%; /* Ajusta según la altura del video o imagen */
-        transition: max-height 1s ease-out; /* Transición para colapsar suavemente */
-    }
-    
-    @keyframes mantenerYColapsar{
-        0%{
-            transform: translateY(0); /* Posición inicial */
-            opacity: 1; /* Visible */
-            max-width: 100%; /* Altura inicial (ajusta según tu video o imagen) */
-        }
-        80%{
-            transform: translateY(0); /* Mantenerse fija hasta el 90.9% (10 segundos) */
-            opacity: 1; /* Sigue siendo visible */
-            max-width: 100%; /* Sigue con su altura original */
-        }
-        100%{
-            transform: translateY(-100%); /* Deslizar hacia arriba */
-            opacity: 0; /* Desaparecer */
-            max-width: 0; /* Colapsar para que el resto del contenido ocupe el lugar */
-        }
-    }
-
-    
+@keyframes mantenerYColapsar {
+  0% {
+    transform: translateY(0); /* Posición inicial */
+    opacity: 1; /* Visible */
+    max-width: 100%; /* Altura inicial (ajusta según tu video o imagen) */
+  }
+  80% {
+    transform: translateY(0); /* Mantenerse fija hasta el 90.9% (10 segundos) */
+    opacity: 1; /* Sigue siendo visible */
+    max-width: 100%; /* Sigue con su altura original */
+  }
+  100% {
+    transform: translateY(-100%); /* Deslizar hacia arriba */
+    opacity: 0; /* Desaparecer */
+    max-width: 0; /* Colapsar para que el resto del contenido ocupe el lugar */
+  }
+}
 /* estilos de home */
-
-.intro-txt{
-    text-align: center;
-    margin: 30px;
+.intro-txt {
+  text-align: center;
+  margin: 30px;
+}
+.intro-txt img {
+  width: 50%;
+  margin-bottom: 20px;
 }
 
-.intro-txt img{
-    width: 50%;
-    margin-bottom: 20px;
+.boton-portafolio {
+  font-family: "proxima-nova";
+  color: white;
+  background-color: #6C98BC;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
 }
 
-.boton-portafolio{
-    font-family: "proxima-nova";
-    color: white;
-    background-color: #6C98BC;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    margin-top: 10px;
+.boton-portafolio:hover {
+  font-weight: bold;
 }
-
-.boton-portafolio:hover{
-    font-weight: bold;
-}
-
-    /* estilos de home - tablet & desktop */
-
-    @media screen and (min-width: 600px){
-  
-        .intro-txt{
-            margin: auto;
-            max-width: 600px;
-        }        
-    }
-
 
 /* estilos de portafolio */
-
-.portafolio{
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-}
-  
-.portafolio-img{
-    position: relative;
-    width: 100%;
-}
-  
-.portafolio-img img{
-    width: 100%;
-    height: auto;
-    display: block;
-    opacity: 1;
-    transition: opacity 0.3s ease;
-}
-  
-.portafolio-img:hover img{
-    opacity: 0.10;
-}
-  
-.portafolio-txt{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-  
-.portafolio-img:hover .portafolio-txt{
-    opacity: 1;
+.portafolio {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
 }
 
-    /* estilos de portafolio - tablet */
+.portafolio-img {
+  position: relative;
+  width: 100%;
+}
+.portafolio-img img {
+  width: 100%;
+  height: auto;
+  display: block;
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
 
-    @media screen and (min-width: 600px){
-        
-        .portafolio{
-            grid-template-columns: repeat(2,1fr);
-        }
-    }
+.portafolio-img:hover img {
+  opacity: 0.1;
+}
 
-    /* estilos de portafolio - desktop */
+.portafolio-txt {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
 
-    @media screen and (min-width: 1200px){
-  
-        .portafolio{
-            grid-template-columns: repeat(3,1fr);
-        }        
-    }
-
+.portafolio-img:hover .portafolio-txt {
+  opacity: 1;
+}
 
 /* estilos de servicios */
-
-.servicios-cat{
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0px 10px;
-    gap: 10px;
+.servicios-cat {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 0px 10px;
+  gap: 10px;
 }
 
-.servicios-intro, .clientes-txt{
-    text-align: left;
+.servicios-intro, .clientes-txt {
+  text-align: left;
 }
 
-.servicios-txt{
-    margin-top: 20px;
-    border-top: #6C98BC solid 10px;
-    text-align: left;
-    line-height: 10px;
+.servicios-txt {
+  margin-top: 20px;
+  border-top: #6C98BC solid 10px;
+  text-align: left;
+  line-height: 10px;
 }
-
-.servicios-txt h5{
-    margin: 10px 0px;
+.servicios-txt h5 {
+  margin: 10px 0px;
 }
-
-    /* estilos de servicios - tablet */
-
-    @media screen and (min-width: 600px){
-  
-        .servicios-cat{
-            grid-template-columns: repeat(2,1fr);
-            justify-content: center;
-            margin: 0px auto;
-            padding: 0px 20px 20px 20px;
-            gap: 0px 20px;
-        }
-
-        .servicios-cat h1, .servicios-intro{
-            grid-column: span 2;
-        }
-
-        .clientes{
-            justify-content: center;
-            margin: 0px auto;
-            padding: 0px 20px 20px 20px;
-            gap: 0px 20px;
-        }        
-    }
-
-    /* estilos de servicios - desktop */
-
-    @media screen and (min-width: 1200px){
-  
-        .servicios-intro, .clientes-txt{
-            max-width: 1200px;
-            justify-content: center;
-            margin: auto;
-        }
-        
-        .servicios-cat{
-            max-width: 1200px;
-            grid-template-columns: repeat(4,1fr);
-        }
-
-        .servicios-cat h1, .servicios-intro{
-            grid-column: span 4;
-        }
-    }
-
 
 /* estilos de nosotros */
-
-.nosotros{
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0px 10px;
-    gap: 10px;
-    text-align: center;
+.nosotros {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 0px 10px;
+  gap: 10px;
+  text-align: center;
+}
+.nosotros p {
+  text-align: left;
+}
+.nosotros h3, .nosotros h5 {
+  text-align: center;
 }
 
-.nosotros-img{
-    position: relative;
-    width: 100%;
-    max-width: 400px;
-    margin-bottom: 20px;
+.nosotros-img {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  margin-bottom: 20px;
 }
-
-.nosotros h3, .nosotros h5{
-    text-align: center;
-}
-
-.nosotros p{
-    text-align: left;
-}
-
-    /* estilos de nosotros - tablet */
-
-    @media screen and (min-width: 600px){
-  
-        .nosotros{
-            grid-template-columns: repeat(2,1fr);
-            justify-content: center;
-            margin: 0 auto;
-            gap: 0px 50px;
-            padding: 0px 50px;
-        }
-
-        .nosotros h1{
-            grid-column: span 2;
-        }
-    }
-
-    /* estilos de nosotros - desktop */    
-
-    @media screen and (min-width: 1200px){
-        
-        .nosotros{
-            max-width: 1200px;
-        }
-    }    
 
 /* estilos de contacto */
-
-.contacto{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.contacto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contacto form fieldset {
+  max-width: 450px;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  margin: auto;
+}
+.contacto form fieldset legend {
+  font-family: "proxima-nova";
+  color: #AEAEAE;
+  font-weight: bold;
+  text-align: center;
+}
+.contacto form fieldset div {
+  padding: 10px 0px;
+}
+.contacto form fieldset div textarea {
+  font-family: "proxima-nova";
+  background-color: #AEAEAE;
+  width: 100%;
+  border: none;
 }
 
-.contacto form fieldset{
-    max-width: 450px;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    margin: auto;
+.formulario-campo {
+  font-family: "proxima-nova";
+  background-color: #AEAEAE;
+  width: 100%;
+  height: 25px;
+  border: none;
 }
 
-.contacto form fieldset legend{
-    font-family: "proxima-nova";
-    color: #AEAEAE;
-    font-weight: bold;
-    text-align: center;
+.boton-contacto {
+  font-family: "proxima-nova";
+  color: white;
+  background-color: #6C98BC;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
 }
 
-.contacto form fieldset div{
-    padding: 10px 0px;
+.boton-contacto:hover {
+  font-weight: bold;
 }
-
-.formulario-campo{
-    font-family: "proxima-nova";
-    background-color: #AEAEAE;
-    width: 100%;
-    height: 25px;
-    border: none;
-}
-
-.contacto form fieldset div textarea{
-    font-family: "proxima-nova";
-    background-color: #AEAEAE;
-    width: 100%;
-    border: none;
-}
-
-.boton-contacto{
-    background-color: #6C98BC;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    margin-top: 10px;
-}
-
-.boton-contacto:hover{
-    font-weight: bold;
-}
-
 
 /* estilos de footer */
-
-footer{
-    padding: 10px 20px;
+footer {
+  padding: 10px 20px;
+}
+footer img {
+  height: 40px;
+}
+footer p {
+  font-size: 10px;
+  color: #AEAEAE;
+  margin-left: 10px;
 }
 
-footer img{
-    height: 40px;
+.aviso-privacidad {
+  color: #AEAEAE;
+  font-weight: bold;
+  text-decoration: none;
 }
 
-footer p{
-    font-size: 10px;
-    color: #AEAEAE;
-    margin-left: 10px;
+/* animacion */
+@media screen and (min-width: 1200px) {
+  .intro-animacion-desktop {
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    overflow: hidden;
+  }
+}
+/* home */
+@media screen and (min-width: 600px) {
+  .intro-txt {
+    margin: auto;
+    max-width: 600px;
+  }
+}
+/* portafolio */
+@media screen and (min-width: 600px) {
+  .portafolio {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portafolio {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+/* servicios */
+@media screen and (min-width: 600px) {
+  .servicios-cat {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    margin: 0px auto;
+    padding: 0px 20px 20px 20px;
+    gap: 0px 20px;
+  }
+  .servicios-cat h1 {
+    grid-column: span 2;
+  }
+  .servicios-intro {
+    grid-column: span 2;
+  }
+  .clientes {
+    justify-content: center;
+    margin: 0px auto;
+    padding: 0px 20px 20px 20px;
+    gap: 0px 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .servicios-intro, .clientes-txt {
+    max-width: 1200px;
+    justify-content: center;
+    margin: auto;
+  }
+  .servicios-intro {
+    grid-column: span 4;
+  }
+  .servicios-cat {
+    max-width: 1200px;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .servicios-cat h1 {
+    grid-column: span 4;
+  }
+}
+/* nosotros */
+@media screen and (min-width: 600px) {
+  .nosotros {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    margin: 0 auto;
+    gap: 0px 50px;
+    padding: 0px 50px;
+  }
+  .nosotros h1 {
+    grid-column: span 2;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nosotros {
+    max-width: 1200px;
+  }
 }
 
-.aviso-privacidad{
-    color: #AEAEAE;
-    font-weight: bold;
-    text-decoration: none;
-}
+/*# sourceMappingURL=main.css.map */
