--- a/scss/base/_contacto.scss
+++ b/scss/base/_contacto.scss
@@ -1,6 +1,6 @@
 //import de variables
 @import "../utilidades/variables";
-//imprt de mixin
+//import de mixin
 @import "../utilidades/mixin";
 
 /* estilos de contacto */
