--- a/scss/base/_home.scss
+++ b/scss/base/_home.scss
@@ -1,6 +1,6 @@
 //import de variables
 @import "../utilidades/variables";
-//imprt de mixin
+//import de mixin
 @import "../utilidades/mixin";
 
 /* animacion */
@@ -10,26 +10,26 @@
 }
 
 .deslizar{
-    animation: mantenerYColapsar 5s forwards; /* Duración total de la animación */
-    max-width: 100%; /* Ajusta según la altura del video o imagen */
-    transition: max-height 1s ease-out; /* Transición para colapsar suavemente */
+    animation: mantenerYColapsar 5s forwards; /* duracion total de la animacion */
+    max-width: 100%;
+    transition: max-height 1s ease-out; /* transicion para colapsar suavemente */
 }
 
 @keyframes mantenerYColapsar{
     0%{
-        transform: translateY(0); /* Posición inicial */
-        opacity: 1; /* Visible */
-        max-width: 100%; /* Altura inicial (ajusta según tu video o imagen) */
+        transform: translateY(0); /* posicion inicial */
+        opacity: 1; /* visible */
+        max-width: 100%;
     }
     80%{
-        transform: translateY(0); /* Mantenerse fija hasta el 90.9% (10 segundos) */
-        opacity: 1; /* Sigue siendo visible */
-        max-width: 100%; /* Sigue con su altura original */
+        transform: translateY(0); /* mantenerse en posicion */
+        opacity: 1; /* visible */
+        max-width: 100%;
     }
     100%{
-        transform: translateY(-100%); /* Deslizar hacia arriba */
-        opacity: 0; /* Desaparecer */
-        max-width: 0; /* Colapsar para que el resto del contenido ocupe el lugar */
+        transform: translateY(-100%); /* deslizar hacia arriba */
+        opacity: 0; /* desaparecer */
+        max-width: 0; /* colapsar para que el resto del contenido ocupe el lugar */
     }
 }
  
